k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-lengthener
  namespace: url-lengthener
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - yet-another-overengineered-url-shortener-learning.project-except-its-actually-lengthening-urls-this-time-so-the.domain-has-to-be-255-symbols-in-total-and.reach-rfc2181-domain-name-length-limit.confusing-anyone-who-encounters-this-saas-online.chivtar.dev
      secretName: url-lengthener-tls
  rules:
    - host: yet-another-overengineered-url-shortener-learning.project-except-its-actually-lengthening-urls-this-time-so-the.domain-has-to-be-255-symbols-in-total-and.reach-rfc2181-domain-name-length-limit.confusing-anyone-who-encounters-this-saas-online.chivtar.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
